# muongit

./: .gitignore  .gitmodules  README.md  TODO.md  agents.md
.claude/: settings.json
benchmarks/: generate-report.py  run-all.sh
docs/: cli.md  git-replacement-gaps.md  user-workflow-gap-matrix.md
kotlin/: Makefile  build.gradle.kts  settings.gradle.kts
rust/: Cargo.toml  Makefile  build.rs
rust/bench/: main.rs
rust/src/: attributes.rs  blame.rs  blob.rs  branch.rs  checkout.rs  cherrypick.rs  commit.rs  config.rs  describe.rs  diff.rs  error.rs  fetch.rs  filter.rs  grafts.rs  ignore.rs  index.rs  lib.rs  mailmap.rs  merge.rs  merge_base.rs  notes.rs  object.rs  odb.rs  oid.rs  pack.rs  pack_index.rs  patch.rs  pathspec.rs  porcelain.rs  rebase.rs  refdb.rs  reflog.rs  refs.rs  remote.rs  remote_transport.rs  repository.rs  revert.rs  revparse.rs  revwalk.rs  sha1.rs  (+9 more)
rust/tests/: cli_smoke.rs  conformance.rs  parity.rs  performance.rs  remote_e2e.rs
scripts/: generate-version.sh  git_remote_fixture.py  repository_conformance.py
swift/: Makefile  Package.swift
tickets/: T-000001.md  T-000003.md  T-000005.md  T-000006.md  T-000008.md  T-000009.md  T-000010.md  T-000011.md  T-000012.md  T-000013.md  T-000014.md  T-000015.md  T-000016.md  T-000017.md  T-000018.md  T-000019.md  T-000020.md  T-000021.md  T-000022.md  T-000024.md  T-000025.md  T-000026.md  T-000027.md  T-000028.md  T-000029.md  T-000030.md  T-000031.md  T-000032.md  T-000033.md  T-000034.md  T-000035.md  T-000036.md  T-000037.md  T-000038.md  T-000039.md  T-000040.md  T-000041.md  T-000042.md  (+17 more)
(+156 files in other folders)
